--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babel-jest": "^22.4.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -16,8 +21,11 @@
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setup_test.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/jest/bin/jest.js",
     "build": "webpack",
     "start": "webpack-dev-server --open"
   },
