--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "enzyme-to-json": "^3.3.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.3.1"
+    "react-modal": "^3.4.4",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -22,7 +21,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "enzyme-to-json": "^3.3.3",
+    "react-test-renderer": "^16.3.1"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setup_test.js",
