--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "babel-jest": "^22.4.3",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
-    "enzyme-to-json": "^3.3.3",
-    "react-test-renderer": "^16.3.1"
+    "react-test-renderer": "^16.3.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setup_test.js",
